# sync-player

./: .dockerignore  .env  .env.example  Dockerfile  app.db  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt
app/: app.py
app/api/: deps.py
app/api/routes/: __init__.py  messages.py  player.py  rooms.py  search.py  users.py  ws.py
app/core/: config.py
app/db/: base.py  engine.py  models.py  redis.py
app/repositories/: __init__.py  base.py  message.py  player_state.py  room.py  room_participant.py  user.py
app/schemas/: message.py  player_state.py  room.py  search.py  user.py
app/services/: player.py  player_state.py  web_search.py  websocket.py
frontend/: .env  index.html  nginx.conf  package-lock.json  package.json  vercel.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js  ws.js
frontend/src/components/layout/: NavBar.jsx  PageShell.jsx
frontend/src/components/lobby/: CreateRoomModal.jsx  JoinByInviteModal.jsx  RoomCard.jsx
frontend/src/components/room/: ChatPanel.jsx  InviteButton.jsx  MessageBubble.jsx  ParticipantList.jsx  (+2 more)
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useMessages.js  usePlayerState.js  useRoom.js  useWebSocket.js
frontend/src/pages/: LobbyPage.jsx  ProfilePage.jsx  RoomPage.jsx
frontend/src/utils/: telegram.js
tests/: conftest.py  test_api_messages.py  test_api_player.py  test_api_rooms.py  test_api_search.py  test_api_users.py  test_message_repo.py  test_player.py  test_room_participant_repo.py  test_room_repo.py  test_user_repo.py  test_web_search.py
(+6 files in other folders)
