[project]
name = "sync-player"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "pytest-asyncio>=1.4.0",
    "redis>=5.0.0",
    "secretstorage>=3.5.0",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
    "websockets>=16.1.1",
    "yt-dlp>=2026.7.4",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
